--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -33,7 +33,7 @@
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/businessman-on-isolated.png" alt="Card image">
         <div class="card-body">
           <p class="title">Person1</p>
           <p>Person1 Title</p>
@@ -43,7 +43,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person_sample.png" alt="Card image">
         <div class="card-body">
           <p class="title">Person2</p>
           <p>Person2 Title</p>
@@ -53,7 +53,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/pessoa.png" alt="Card image">
         <div class="card-body">
           <p class="title">Person3</p>
           <p>Person3 Title</p>
